--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.4.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
+    "mongoose": "^5.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
+    "superagent": "^5.2.2",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
+    "@types/mongoose": "^5.7.7",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
