--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.4.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
@@ -40,8 +46,11 @@
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/mongoose": "^5.7.7",
     "@types/node": "^13.1.6",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
