--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "server-test": "start-server-and-test start http://localhost:3000 test"
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
+    "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^6.10.14",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
@@ -59,6 +61,7 @@
     "eslint-plugin-import": "^2.19.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "start-server-and-test": "^1.10.11",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.0",
     "ts-loader": "^6.2.1",
