--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
             - checkout
             - setup_remote_docker
             - run:
+                name: Clone database image
+                command: git clone https://$BITBUCKET_USERNAME:$BITBUCKET_PASSWORD@bitbucket.org/cyber4all-clark/database-image.git
+            - run:
                 name: Run Functional Test Suite
                 command: | 
                     docker-compose -f docker-compose.functional-tests.yml up
