--- a/docker-compose.functional-tests.yml
+++ b/docker-compose.functional-tests.yml
@@ -7,8 +7,8 @@ services:
         # For CI testing, this database image will be cloned in CI
         # For Development, this repository is available in the DevBox
         volumes: 
-            # - ../database-image/database-image-02-20-20:/data/db
-            - ../CLARK-DevBox/database-image/database-image-02-20-20:/data/db
+            - ../database-image/database-image-02-20-20:/data/db
+            # - ../CLARK-DevBox/database-image/database-image-02-20-20:/data/db
 
     rabbitmq:
         image: rabbitmq:3.8
@@ -42,7 +42,7 @@ services:
         build:
             context: .
             target: builder
-        command: ./wait-for-container.sh http://learning-object-service "npm run server-test"
+        command: ./wait-for-container.sh http://learning-object-service "npm run start"
         environment: 
             - DB_URI_ONION=mongodb://mongodb:27017/onion
             - DB_URI_OUTCOMES=mongodb://mongodb:27017/outcomes
