enable functional test step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
             - run:
                 name: debug
                 command: ls
-            # - run:
-            #     name: Run Functional Test Suite
-            #     command: | 
-            #         docker-compose -f docker-compose.functional-tests.yml up
+            - run:
+                name: Run Functional Test Suite
+                command: | 
+                    docker-compose -f docker-compose.functional-tests.yml up
 
 workflows:
     build-and-test:
