--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
                 command: git clone https://$BITBUCKET_USERNAME:$BITBUCKET_PASSWORD@bitbucket.org/cyber4all-clark/database-image.git
             - run:
                 name: debug
-                command: ls
+                command: ls database-image/database-image-02-20-20
             - run:
                 name: Run Functional Test Suite
                 command: | 
